@@ -19,7 +19,8 @@
 
 === 3.4.3 (2017-04-24) ===
 
-
+* Fixed a security vulnerability in the page redirect field which allowed users
+  to insert javascript code.
 
 
 === 3.4.2 (2017-01-23) ===
